--- a/www/index.html
+++ b/www/index.html
@@ -7,28 +7,37 @@
 
 <!-- shiny includes -->
 
-
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>  <script type="application/shiny-singletons"></script>  <script type="application/html-dependencies">json2[2014.02.04];jquery[1.11.3];shiny[0.13.0];htmlwidgets[0.5];plotlyjs[1.2.1];plotly-binding[2.0.16];bootstrap[3.3.5]</script><script src="shared/json2-min.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<script type="application/shiny-singletons"></script>
+<script type="application/html-dependencies">
+json2[2014.02.04];jquery[1.11.3];shiny[0.13.0];htmlwidgets[0.5];bootstrap[3.3.5]
+</script>
+<script src="shared/json2-min.js"></script>
 <script src="shared/jquery.min.js"></script>
 <link href="shared/shiny.css" rel="stylesheet" />
 <script src="shared/shiny.min.js"></script>
 <script src="htmlwidgets-0.5/htmlwidgets.js"></script>
-<script src="plotlyjs-1.2.1/plotly-latest.min.js"></script>
-<script src="plotly-binding-2.0.16/plotly.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="shared/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <script src="shared/bootstrap/js/bootstrap.min.js"></script>
 <script src="shared/bootstrap/shim/html5shiv.min.js"></script>
 <script src="shared/bootstrap/shim/respond.min.js"></script>  
 
-
 <!-- end shiny includes -->
 
 <!-- includes -->
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+<!-- local -->
+<script src="plotly-latest.min.js"></script>
+<script type="text/javascript" charset="utf8" src="jquery.dataTables.min.js"></script>
+<link rel="stylesheet" type="text/css" href="jquery.dataTables.min.css">
+
+<!-- web -->
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.css">
-<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.js"></script>
+<!--script src="https://cdn.plot.ly/plotly-latest.min.js"></script>-->
+<!--<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.css">-->
+<!--<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.js"></script>-->
+
 <!-- end includes -->
 
 </head>
