--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Historical Fide rating charts of top players</title>
+<title></title>
 
 <!-- shiny includes -->
 
@@ -34,7 +34,7 @@ json2[2014.02.04];jquery[1.11.3];shiny[0.13.0];htmlwidgets[0.5];bootstrap[3.3.5]
 
 <!-- web -->
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<!--script src="https://cdn.plot.ly/plotly-latest.min.js"></script>-->
+<!--<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>-->
 <!--<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.css">-->
 <!--<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.js"></script>-->
 
