--- a/www/index.html
+++ b/www/index.html
@@ -8,37 +8,40 @@
 <!-- shiny includes -->
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<link href="shared/shiny.css" rel="stylesheet" />
+<link href="shared/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
 <script type="application/shiny-singletons"></script>
-<script type="application/html-dependencies">
-json2[2014.02.04];jquery[1.11.3];shiny[0.13.0];htmlwidgets[0.5];bootstrap[3.3.5]
-</script>
 <script src="shared/json2-min.js"></script>
 <script src="shared/jquery.min.js"></script>
-<link href="shared/shiny.css" rel="stylesheet" />
 <script src="shared/shiny.min.js"></script>
-<script src="htmlwidgets-0.5/htmlwidgets.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="shared/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <script src="shared/bootstrap/js/bootstrap.min.js"></script>
 <script src="shared/bootstrap/shim/html5shiv.min.js"></script>
-<script src="shared/bootstrap/shim/respond.min.js"></script>  
+<script src="shared/bootstrap/shim/respond.min.js"></script>
 
-<!-- end shiny includes -->
+<!-- local shiny includes from the www folder -->
 
-<!-- includes -->
-
-<!-- local -->
-<script src="plotly-latest.min.js"></script>
-<script type="text/javascript" charset="utf8" src="jquery.dataTables.min.js"></script>
 <link rel="stylesheet" type="text/css" href="jquery.dataTables.min.css">
 
+<script src="htmlwidgets.js"></script>
+<script src="datatables.js"></script>
+<script type="text/javascript" charset="utf8" src="jquery.dataTables.min.js"></script>
+<script src="plotly-latest.min.js"></script>
+<script src="plotly.js"></script>
+
 <!-- web -->
+
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <!--<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>-->
 <!--<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.css">-->
 <!--<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.js"></script>-->
 
-<!-- end includes -->
+<!-- user defined -->
+
+<link href="divs.css" rel="stylesheet" />
 
 </head>
 
@@ -59,8 +62,7 @@ function setTable(message)
 }
 function setPlot(message)
 {
-	TESTER = document.getElementById('tester');
-	Plotly.plot( TESTER, JSON.parse(message[0]), JSON.parse(message[1]) );	
+	Plotly.newPlot(document.getElementById(message[0]),JSON.parse(message[1]),JSON.parse(message[2]));	
 }
 // end handlers
 
@@ -80,10 +82,18 @@ $(document).ready(function(){
 
 </script>
 
-<div id="mytablecont"></div>
-<div id="tester" style="width:600px;height:250px;"></div>
-<div id="svgcont"></div>
-<div onmousedown="cval=cval+1;Shiny.onInputChange('control',cval);">control</div>
+<div class="parent">
+  <div class="a">
+	<button onmousedown="cval=cval+1;Shiny.onInputChange('control',cval);">Control</button>
+  </div>
+  <div class="b">
+  	<div id="dataTable" style="width:100%; height:auto" class="datatables html-widget html-widget-output"></div>
+    <div id="trendPlot" style="width:100%; height:auto" class="plotly html-widget html-widget-output"></div>
+  	<div id="tablecont"></div>
+	<div id="svgcont"></div>
+  	<div id="plotlycont"></div>
+  </div>
+</div>
 
 </body>
 
