--- a/www/index.html
+++ b/www/index.html
@@ -65,17 +65,57 @@ function setPlot(message)
 	Plotly.newPlot(document.getElementById(message[0]),JSON.parse(message[1]),JSON.parse(message[2]));	
 }
 var players;
+var selplayers;
+var numplayers;
 function setPlayers(message)
 {
 	players=message;
-	var buff="";
-	for(i=0;i<players.length;i++)
-	{
-		buff+=(players[i]+"<br>");
-	}
-	$(".playerselect").html(buff);
+	numplayers=players.length;
+	selplayers=new Array(numplayers);
+	for(var i=0; i<selplayers.length; ++i) { selplayers[i]=false; }
 }
 // end handlers
+
+function handlePlayerCheckbox(i,cb){
+	selplayers[i]=cb.checked;
+	var selpis=new Array(0);
+	for(j=0;j<numplayers;j++) {
+		if(selplayers[j]) {
+			selpis.push(players[j]);
+		}
+	}
+	cval=cval+1;Shiny.onInputChange('control',selpis);
+}
+
+function clearSelect(){
+	$(".playerselect").hide();
+}
+
+function selectLetter(letter)
+{
+	var buff="";
+	var found=0
+	for(i=0;i<numplayers;i++)
+	{
+		var player=players[i]
+		if(player.charAt(0)==letter){
+			var checked='';
+			found++;
+			if(selplayers[i]){
+				checked=' checked';
+			}
+			buff+=('<input type="checkbox" onclick="handlePlayerCheckbox('+i+',this)"'+checked+'>&nbsp;'+player+"<br>");
+		}
+	}
+	if(found==0){
+		buff="no players found"
+	}
+	var psdiv='<table><tr><td></td><td onclick="clearSelect();"><img src="delt.png"></td></tr><tr><td>'+buff+'</td><td></td></tr></table>'
+	$(".playerselect").html(psdiv);
+	var pos=$("#selpb"+letter).position().left;
+	$(".playerselect").css("left",pos.toString()+"px")
+	$(".playerselect").show();
+}
 
 // build letter menu
 function buildLetterMenu()
@@ -83,7 +123,8 @@ function buildLetterMenu()
 	var buff="Players:";
 	for(i="A".charCodeAt(0);i<"Z".charCodeAt(0);i++)
 	{
-		buff+='<button>'+String.fromCharCode(i)+'</button>'
+		var letter=String.fromCharCode(i);
+		buff+=('<button id="selpb'+letter+'" onclick="selectLetter('+"'"+letter+"'"+');">'+letter+'</button>');
 	}
 	$('.menu').html(buff);
 }
@@ -105,7 +146,8 @@ $(document).ready(function(){
 	$(function() {
   	setTimeout(function() {
     	Shiny.onInputChange('rplayers',1);
-  	}, 100)
+    	Shiny.onInputChange('control',["Carlsen..Magnus","Nakamura..Hikaru"]);
+  	}, 1000)
 });
 
 
@@ -121,7 +163,7 @@ $(document).ready(function(){
 	<button id="cbutton" onmousedown="cval=cval+1;Shiny.onInputChange('rplayers',cval);">Control</button>
   </div>
   <div class="playerselect">
-  select player
+  Select players by clicking on their initial letter
   </div>
   <div class="content">
   	<div id="dataTable" style="width:100%; height:auto" class="datatables html-widget html-widget-output"></div>
