--- a/www/index.html
+++ b/www/index.html
@@ -76,8 +76,18 @@ function setPlayers(message)
 }
 // end handlers
 
-function handlePlayerCheckbox(i,cb){
-	selplayers[i]=cb.checked;
+var lastletter="-";
+
+function pchcont(sel){
+	if(sel){
+		return '<img class="selicon" src="selected.png">'
+	}
+	return '<img class="selicon" src="unselected.png">'
+}
+
+function handlePlayerCheckbox(i){
+	selplayers[i]=!selplayers[i];
+	$('#pch'+i.toString()).html(pchcont(selplayers[i]))
 	var selpis=new Array(0);
 	for(j=0;j<numplayers;j++) {
 		if(selplayers[j]) {
@@ -88,43 +98,70 @@ function handlePlayerCheckbox(i,cb){
 }
 
 function clearSelect(){
-	$(".playerselect").hide();
+	$(".playerselect").slideUp();
+	lastletter="-";
 }
 
-function selectLetter(letter)
+var letter="+"
+function selectLetterInner()
 {
 	var buff="";
 	var found=0
 	for(i=0;i<numplayers;i++)
 	{
 		var player=players[i]
-		if(player.charAt(0)==letter){
-			var checked='';
+		var ok;
+		if(letter==0){
+			ok=selplayers[i]
+		}else{
+			ok=(player.charAt(0)==letter);
+		}
+		if(ok){
+			var checked=pchcont(false);
 			found++;
 			if(selplayers[i]){
-				checked=' checked';
+				checked=pchcont(true);
 			}
-			buff+=('<input type="checkbox" onclick="handlePlayerCheckbox('+i+',this)"'+checked+'>&nbsp;'+player+"<br>");
+			buff+=('<span onmousedown="handlePlayerCheckbox('+i+')"><span id="pch'+i+'">'+checked+'</span>&nbsp;<a href="#">'+
+				player+"</a></span><br>");
 		}
 	}
 	if(found==0){
 		buff="no players found"
 	}
-	var psdiv='<table><tr><td></td><td onclick="clearSelect();"><img src="delt.png"></td></tr><tr><td>'+buff+'</td><td></td></tr></table>'
+	var psdiv='<div class="playerselectinner">'+buff+'</div><div class="playerselectexit"><img src="delt.png" onmousedown="clearSelect();"></div>'
 	$(".playerselect").html(psdiv);
 	var pos=$("#selpb"+letter).position().left;
+	if(pos>600){pos=600;}
+	pos-=40;
 	$(".playerselect").css("left",pos.toString()+"px")
-	$(".playerselect").show();
+	$(".playerselect").slideDown();
+}
+
+function selectLetter(setletter){
+	letter=setletter;
+	if(letter===lastletter){
+		clearSelect();
+		return;
+	}
+	if(lastletter==="-"){
+		lastletter=letter;
+		$(".playerselect").slideUp(100,selectLetterInner);
+	}
+	else{
+		lastletter="-";
+		$(".playerselect").slideUp(100,selectLetterInner);
+	}
 }
 
 // build letter menu
 function buildLetterMenu()
 {
-	var buff="Players:";
+	var buff='&nbsp;Players:&nbsp;<button class="letterbutton" id="selpb0" onClick="selectLetter(0);">Remove</button>';
 	for(i="A".charCodeAt(0);i<"Z".charCodeAt(0);i++)
 	{
 		var letter=String.fromCharCode(i);
-		buff+=('<button id="selpb'+letter+'" onclick="selectLetter('+"'"+letter+"'"+');">'+letter+'</button>');
+		buff+=('<button class="letterbutton" id="selpb'+letter+'" onclick="selectLetter('+"'"+letter+"'"+');">'+letter+'</button>');
 	}
 	$('.menu').html(buff);
 }
@@ -165,12 +202,13 @@ $(document).ready(function(){
   <div class="playerselect">
   Select players by clicking on their initial letter
   </div>
-  <div class="content">
-  	<div id="dataTable" style="width:100%; height:auto" class="datatables html-widget html-widget-output"></div>
-    <div id="trendPlot" style="width:100%; height:auto" class="plotly html-widget html-widget-output"></div>
+    <div class="content">
+    	<div id="trendPlot" class="plotly html-widget html-widget-output"></div>
+    </div>
+    <!--<div id="dataTable" style="width:100%; height:auto" class="datatables html-widget html-widget-output"></div>
   	<div id="tablecont"></div>
 	<div id="svgcont"></div>
-  	<div id="plotlycont"></div>
+  	<div id="plotlycont"></div>-->
   </div>
 </div>
 
